--- a/frontend/stylesheets/modal-create-testkit.scss
+++ b/frontend/stylesheets/modal-create-testkit.scss
@@ -6,6 +6,7 @@
 
 	.modal-dialog{
 		height: calc(100% - 100px);
+		max-height: 700px;
 		.modal-content{
 			box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 			border: none;
