--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -419,7 +419,7 @@
             vertical-align: middle;
           }
           .width1 {
-            padding: 10px;
+            padding: 5px 0px 5px 0px;
           }
           .dummy-placeholder {
             padding: 25px;
