set background color at right table panel

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -187,8 +187,8 @@ limitations under the License.
           <chart-well-switch style="position: absolute; height: 100%;" ng-model="wellButtons" color-by="color_by" chart-type="amplification"></chart-well-switch>
         </div>
       </div>
-      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" force="true" style="width: 35%; height: 100%; padding-right: 0; padding-left: 0; margin-top:0px; overflow: auto;">
-        <table style="height: fit-content; min-width: 540px;">
+      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" force="true" style="width: 35%; height: 100%; padding-right: 0; padding-left: 0; margin-top:0px; overflow: auto; background: #eee;">
+        <table style="height: fit-content; min-width: 540px; backface-visibility: white">
           <tbody>
             <tr>
               <th class="B2-M-Amplification" style="text-align: center; border-left:none">Clr</th>
