--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -409,7 +409,8 @@
             padding: 5px 0px 5px 0px;
           }
           .dummy-placeholder {
-            padding: 25px;
+            padding-right: 3px;
+            padding-left: 3px;
           }
         }
         &.selected {
