--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -252,7 +252,16 @@
       // display: inline-block;
       width: 18%;
       // height: 100%;
-      margin-left: 20px;
+      // margin-left: 20px;
+      padding-right: 10px;
+      padding-left: 20px;
+      margin: 0px;
+      background: transparent;
+      flex-grow: 1;
+      float: left;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
       div {
         width: 100%;
         background-color: #fff;
